<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.boudreau.guitarteacher.MainActivity">

    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="100"
        android:title="@string/log_out"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_edit_profile"
        android:orderInCategory="100"
        android:title="@string/edit_profile"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_delete_profile"
        android:orderInCategory="100"
        android:title="@string/delete_profile"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>