<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_white"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ablMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.GuitarTeacher.NoActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/bright_yellow"
            app:popupTheme="@style/Theme.GuitarTeacher.AppBarOverlay"
            app:subtitleTextColor="@color/all_black"
            app:title="@string/app_name"
            app:titleTextColor="@color/all_black" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imgGuitar"
        android:layout_width="320dp"
        android:layout_height="441dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/guitar_image"
        android:src="@drawable/guitar_thumbnail_white_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ablMain" />

    <TextView
        android:id="@+id/lblWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome"
        android:textColor="@color/oxford_blue"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLearnToPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgGuitar" />

    <Button
        android:id="@+id/btnLearnToPlay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/orange_web"
        android:text="@string/learn_to_play"
        android:textAllCaps="false"
        android:textColor="@color/all_black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnExploreGuitars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnFindAShop"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/orange_web"
        android:text="@string/find_a_shop"
        android:textAllCaps="false"
        android:textColor="@color/all_black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnExploreGuitars"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/orange_web"
        android:text="@string/explore_guitars"
        android:textAllCaps="false"
        android:textColor="@color/all_black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnFindAShop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>